--- a/styles/section--white.css
+++ b/styles/section--white.css
@@ -1,5 +1,10 @@
-.section--white {
+.white-bg {
 	background-image: url(../images/white-bg.png);
+	background-size: cover;
+}
+
+.section--white {
+	
 	padding: 0 140px;
 	height: 200px;
 	display:flex;
