--- a/styles/section--yellow.css
+++ b/styles/section--yellow.css
@@ -1,6 +1,9 @@
-.section--yellow {
+.yellow-bg {
 	background-image: url(../images/bg-y.png);
-	
+	background-size: cover;
+}
+
+.section--yellow {
 	padding: 0 140px;
 }
 
@@ -28,7 +31,7 @@
 
 .s--y__right {
 	width: 320px;
-	height: 200px;
+	height: 235px;
 	background-color: #ec9e03;
 	position: relative;
 }
@@ -62,7 +65,7 @@
 	background-image: url(../images/+.png);
 	background-repeat: no-repeat;
 	left:290px;
-	top:180px;
+	top:210px;
 }
 
 
@@ -77,7 +80,7 @@
 	position: relative;
 	box-sizing: border-box;
 	width: 320px;
-	height: 200px;
+	height: 235px;
 	background-color: #ec9e03;
 	color: #f8daa0;
 	text-align: left;
@@ -94,16 +97,16 @@
 	background-image: url(../images/+.png);
 	background-repeat: no-repeat;
 	left:290px;
-	top:180px;
+	top:210px;
 }
 
 .left__player {
 	position: relative;
 	width:320px;
-	height: 200px;
+	height: 235px;
 	background-image: url(../images/jorge.png);
 	background-repeat: no-repeat;
-	background-size: 320px; 
+	background-size: 100%; 
 }
 
 .left__player--play {
