--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,7 +3,7 @@
 	background-size: cover;
 }
 
-.section--grey {
+.footer--grey {
 	padding: 0 140px;
 }
 
@@ -26,7 +26,8 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-items: center; 
+	align-items: flex-end; 
+	padding-bottom:108px;
 }
 
 .footer-images {
@@ -87,14 +88,66 @@
 	color: #a9a9a7;
 	font-size: 15pt;
 	font-family: sans-serif;
-	line-height: 30px;
+	padding-left: 20px;
+	padding-bottom: 15px;
+
 }
 
 .footer-text__item:before {
+	display: inline-block;
 	content: "";
-	width: 5px;
-	height: 5px;
+	width: 10px;
+	height: 10px;
 	border-radius: 50%;
-	background-color: #f5c506; 
-	padding-right: 10px;
+	background-color: #f5c506;
+	margin-left: -10px; 
+}
+
+
+
+.section--grey {
+	background-color: #4c4c4c;
+	box-shadow: 0 -3px 15px  #222;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.copyright {
+	padding: 5px 140px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.footer-logo {
+	width: 170px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.f-l__img {
+	background-image: url(../images/logo2.png),  url(../images/logo1.png);
+	height: 50px;
+	width: 50px;
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+.f-l__text {
+	color: #fff;
+	text-transform: uppercase;
+	font-style: italic;
+	font-family: sans-serif;
+	font-size: 15pt;
+}
+
+.copyright-text {
+	color: #fff;
+	font-family: sans-serif;
+	font-size: 11pt;
 }
