--- a/styles/index.css
+++ b/styles/index.css
@@ -5,8 +5,14 @@
 }
 
 .container {
-	width:1300px;
+	width:1020px;
 	margin: auto;
+}
+
+@media (max-width: 1020px) {
+	.container {
+		width: 100%;
+	}
 }
 
 .header-bg {
@@ -14,12 +20,47 @@
 	background-size: cover;
 }
 
+
 .header {
-	
 	padding-top: 24px;
-	padding-left: 140px;
-	padding-right: 140px;
 	box-sizing: border-box;
+}
+
+@media (max-width: 1020px) {
+	.header {
+		padding:0;
+	}
+}
+
+.logo-and-menu {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+@media (max-width: 1020px) {
+	.logo-and-menu {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: space-between;
+	}
+}
+
+.logo {
+	width:450px;
+}
+
+@media (max-width: 1020px) {
+	.logo {
+		width:185px;
+		height: 57px;
+		background-image: url(../images/logo-bg.png);
+		background-repeat: no-repeat;
+		background-size: 100%;
+		box-shadow: 0 2px 5px 0 #000;		
+	}
 }
 
 .logo-img {
@@ -31,6 +72,15 @@
 	background-position: center;
 }
 
+@media (max-width: 1020px) {
+	.logo-img {
+		width: 50px;
+		height: 53px;
+		background-size: 40px;
+		box-sizing: border-box;
+	}
+}
+
 .logo__link {
 	padding: 0 83px 65px;
 }
@@ -40,7 +90,12 @@
 	color: #fff;
 	width:355px;
 	padding-top:25px;
+}
 
+@media(max-width: 1020px) {
+	.logo__text {
+		width: 120px;
+	}
 }
 
 .logo__header{
@@ -51,6 +106,13 @@
 	font-size: 25pt;
 }
 
+@media (max-width: 1020px) {
+	.logo__header {
+		font-size: 17pt;
+		line-height: 5px
+	}
+}
+
 .logo__indx {
 	color:#968f89;
 	font-style: normal;
@@ -58,14 +120,30 @@
 	font-size:8pt;
 }
 
+@media (max-width: 1020px) {
+	.logo__indx {
+		display: none;
+	}
+}
+
 .header-menu {
-	float: right;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: flex-start;
 	box-sizing: border-box;
 	background-color: #f5c506;
-	margin-top:40px;
 	width: 452px;
 	height: 40px;
 	box-shadow: -5px -5px 0 rgba(245,197,6,0.5), -10px -10px 0 rgba(245,197,6,0.25);
+}
+
+@media (max-width: 1020px) {
+	.header-menu {
+		box-shadow: none;
+		flex-grow: 1;
+		height: 57px;
+	}
 }
 
 .header-menu__item {
@@ -76,9 +154,16 @@
 	line-height: 40px;
 }
 
+@media (max-width: 1020px) {
+	.header-menu__item {
+		padding-left: 40px;
+		line-height: 57px;
+	}
+}
+
 .h-m__i--ab__img {
-	width: 100px;
-	height: 100px;
+	width: 30px;
+	height: 30px;
 	background-image: url(../images/about.png);
 	background-repeat: no-repeat;
 	background-size: 30px;
@@ -87,9 +172,15 @@
 	top: 5px;
 }
 
+@media (max-width: 1020px) {
+	.h-m__i--ab__img {
+		top: 10px;
+	}
+}
+
 .h-m__i--s__img {
-	width: 100px;
-	height: 100px;
+	width: 30px;
+	height: 30px;
 	background-image: url(../images/setting.png);
 	background-repeat: no-repeat;
 	background-size: 30px;
@@ -98,15 +189,27 @@
 	top: 5px;
 }
 
+@media (max-width: 1020px) {
+	.h-m__i--s__img {
+		top: 10px;
+	}
+}
+
 .h-m__i--c__img {
-	width: 100px;
-	height: 100px;
+	width: 30px;
+	height: 30px;
 	background-image: url(../images/mail.png);
 	background-repeat: no-repeat;
 	background-size: 30px;
 	position: absolute;
-	top:10px;
-	left:15px;
+	left: 15px;
+	top: 7px;
+}
+
+@media (max-width: 1020px) {
+	.h-m__i--c__img {
+		top: 14px;
+	}
 }
 
 .h-m__i--services {
@@ -119,7 +222,6 @@
 	text-decoration: none;
 	color:#b99403;
 	padding: 10px 10px;
-	border-radius: 2px;
 	text-transform: uppercase;
 	font-size: 12pt;
 	font-family: Helvetica;
@@ -130,24 +232,38 @@
 }
 
 .header-playerblock {
-	height: 338px;
 	padding-bottom: 68px;
 	padding-top: 53px;
 	display:flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: stretch;
 }
 
-.header-pl__player {
-	background-image: url(../images/player.png);
-	background-repeat: no-repeat;
-	width: 549px;
-	height: 330px;
+@media (max-width: 1020px) {
+	.header-playerblock {
+		padding: 0;
+		width: 100%;
+		height: 330px;
+	}
+}
+
+@media (max-width: 1020px) {
+	.header-pl__player {
+		width: 100%;
+		height: 330px;
+	}
 }
 
 .header-pl__text {
 	padding-top: 100px;
 	text-align: center;
+}
+
+@media (max-width: 1020px) {
+	.header-pl__text {
+		display: none;
+	}
 }
 
 .header-pl__words {
