--- a/styles/section--white.css
+++ b/styles/section--white.css
@@ -4,37 +4,49 @@
 }
 
 .section--white {
-	
-	padding: 0 140px;
 	height: 200px;
 	display:flex;
 	flex-direction: row;
 	justify-content: space-around;
-	align-items: center;
+	align-items: stretch;
 	box-shadow:0 15px 15px  -15px #333 ,  0 -15px 15px  -15px #333;
 }
 
 .s--w__img {
-	width: 300px;
-	height: 170px;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
 	text-transform: uppercase;
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 18pt;
-	line-height: 310px;
+	flex-grow: 1;
+}
+
+@media (max-width: 1020px) {
+	.s--w__img {
+		display:flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+	}
 }
 
 .s--w__better-design {
-	background-image: url(../images/cloud.png);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .s--w__customise {
-	background-image: url(../images/listok.png);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .s--w__its-free {
-	background-image: url(../images/fly.png);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
