--- a/styles/section--white.css
+++ b/styles/section--white.css
@@ -12,6 +12,13 @@
 	box-shadow:0 15px 15px  -15px #333 ,  0 -15px 15px  -15px #333;
 }
 
+@media (max-width: 1020px) {
+	.section--white {
+
+		box-shadow: 0 -5px 0 rgb(255,255,255);
+	}
+}
+
 .s--w__img {
 	text-transform: uppercase;
 	text-align: center;
